tests/should_fail/try_no_result_fn.fit
enum IoError { Disconnected }
fn read() -> Result<String, IoError>

fn test() -> String {
    read()?
}
